# src/app/api/models.ts
@@ -1,4 +1,4 @@
 export { Acidity } from './models/acidity';
-export { Aroma } from './models/aroma';
 export { Clasification } from './models/clasification';
+export { Sweetness } from './models/sweetness';
 export { Wine } from './models/wine';
