# src/app/api/services.ts
@@ -1,4 +1,4 @@
 export { AcidityService } from './services/acidity.service';
-export { AromaService } from './services/aroma.service';
 export { ClasificationService } from './services/clasification.service';
+export { SweetnessService } from './services/sweetness.service';
 export { WineService } from './services/wine.service';
